[tool.poetry]
name = "daq-display"
version = "0.1.0"
description = ""
authors = ["Hamlin Liu <hamlin.liu@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
PyQt5 = "^5.15.0"
pyqtgraph = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
